--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt-openid-connect",
-  "version": "0.7.0",
+  "version": "0.69.0",
   "description": "An nuxt 3 module with OpenID-Connect(OIDC) integration.",
   "keywords": [
     "nuxt",
@@ -37,19 +37,19 @@
     "pub": "npm publish --access public"
   },
   "dependencies": {
-    "@nuxt/kit": "^3.9.3",
-    "defu": "^6.0.0",
-    "openid-client": "^5.1.6",
-    "uuid": "^9.0.0"
+    "@nuxt/kit": "3.9.3",
+    "defu": "6.0.0",
+    "openid-client": "5.1.6",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@nuxt/module-builder": "latest",
-    "@nuxtjs/eslint-config-typescript": "latest",
-    "@types/node": "^20.11.10",
-    "@types/uuid": "^8.3.4",
-    "eslint": "latest",
-    "nuxt": "^3.9.3",
-    "typescript": "^5.3.3"
+    "@nuxt/module-builder": "0.2.1",
+    "@nuxtjs/eslint-config-typescript": "12.0.0",
+    "@types/node": "20.11.10",
+    "@types/uuid": "8.3.4",
+    "eslint": "8.35.0",
+    "nuxt": "3.9.3",
+    "typescript": "5.3.3"
   },
   "bugs": {
     "url": "https://github.com/aborn/nuxt-openid-connect/issues"
